# VisionPercepcion_USB2015

./: .gitignore  .gitmodules  README.md  build_everything_ws.sh  setup_everything_ws.sh
Code/Diverse_Examples/Endogenos/BoostLibraries_example/: BoostLibraries_example.layout  main.cpp
Code/Diverse_Examples/Endogenos/ConvexHull/: ConvexHull.cbp
Code/Diverse_Examples/Endogenos/PruebaInstalacionCodeBlocks/: PruebaInstalacionCodeBlocks.cbp  PruebaInstalacionCodeBlocks.depend
Code/Diverse_Examples/Endogenos/PruebaInstalacion_PCL_CodeBlocks/: main.cpp
Code/Diverse_Examples/Endogenos/SLIC-Superpixels-modificado/: SLIC-Superpixels-modificado.depend
Code/Diverse_Examples/Endogenos/gps_sapienza_modificado/: gps_sapienza_modificado.cbp  gps_sapienza_modificado.depend  gps_sapienza_modificado.layout  img_proc_fcns.h
Code/Diverse_Examples/OtrasPersonas/gps_sapienza_codeblocks/: gps_sapienza_codeblocks.layout  img_proc_fcns.cpp  main.cpp
Code/Diverse_Examples/OtrasPersonas/ground_plane_segmentation/: README.txt  img_proc_fcns.cpp  init_structures.cpp  init_structures.h
Code/Diverse_Examples/OtrasPersonas/spl-R703_2014-05-29/: aim.m  alpha.m  axescfg.m  beta.m  covarplot.m  demoautoseg.m  demofit.m  demomanseg.m  drlog.m  figaa.m  fitbbox.m  frustumplot.m  hgbbox.m  inrball.m  lls.m  lm.m  makefile  numj.m  patchchk.m  patchplot.m  (+16 more)
Code/Thesis_ws/devel/: .catkin  .rosinstall  setup.sh
Codigos/Depth_Detection/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
Codigos/Depth_Detection/src/: Depth_Detection.cpp  Depth_Detection.cpp~
Codigos/Ejemplos/ImageSubstraction/: ImageSubstraction.cbp  main.cpp
Codigos/Ejemplos/PruebaInstalacionCodeBlocks/: PruebaInstalacionCodeBlocks.cbp
Codigos/Ejemplos/PruebaInstalacion_PCL_CodeBlocks/: PruebaInstalacion_PCL_CodeBlocks.cbp
Codigos/Tesis_ws/: out.avi
Codigos/Tesis_ws/src/Object_Detection_Publisher/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
Codigos/Tesis_ws/src/Object_Detection_Publisher/src/: Object_Detection_Publisher.cpp  Object_Detection_Publisher.cpp~
Codigos/Tesis_ws/src/Plane_Segmentation_3/: CMakeLists.txt  package.xml
Codigos/Tesis_ws/src/Plane_Segmentation_3/slic_modified/: slic.cpp  slic.h  slic.h~  superpixel.cpp  superpixel.cpp~  superpixel.h
Codigos/Tesis_ws/src/Plane_Segmentation_3/src/: Plane_Segmentation.cpp~  Plane_Segmentation_2.cpp~  Plane_Segmentation_3.cpp  Plane_Segmentation_3.cpp~  functions2.cpp  functions2.cpp~  functions2.h  segment-graph.h~
Codigos/Tesis_ws/src/gps_sapienza_ros/: CMakeLists.txt  CMakeLists.txt~  package.xml
Codigos/Tesis_ws/src/gps_sapienza_ros/src/: img_proc_fcns.cpp  main.cpp
Codigos/Tesis_ws/src/plane_segmentation_alpha/: CMakeLists.txt  package.xml  package.xml~
Codigos/Tesis_ws/src/plane_segmentation_alpha/slic_modified/: slic.h  superpixel.cpp  superpixel.h  superpixel.h~
Codigos/Tesis_ws/src/plane_segmentation_alpha/src/: Plane_Segmentation_alpha.cpp  plane_segmentation_alpha.cpp
Codigos/Tesis_ws/src/usbgm_pfs/: CMakeLists.txt  CMakeLists.txt~  package.xml
Codigos/Tesis_ws/src/usbgm_pfs/include/: AbstractSegmentation.cpp  global.h  hough_horizon_search.h  probabilistic_functions.h  segmentation_handler.h
Codigos/Tesis_ws/src/usbgm_pfs/include/egbis/: egbis.cpp  egbis.h  segment-graph.h  segment-image.h
Codigos/Tesis_ws/src/usbgm_pfs/include/gps_sapienza/: ListaFuncionesReimplementar.cpp  img_proc_functions.cpp  img_proc_functions.h  init_structures.cpp  init_structures.h
Codigos/Tesis_ws/src/usbgm_pfs/include/gps_sapienza_encapsulated/: image_features.cpp  img_proc_functions.h  init_structures.cpp
Codigos/Tesis_ws/src/usbgm_pfs/include/libsuperpixel/: superpixel.cpp  superpixel.h
Codigos/Tesis_ws/src/usbgm_pfs/include/slic_modified/: slic.cpp  slic.h  superpixel.cpp
Codigos/Tesis_ws/src/usbgm_pfs/slic_modified/: slic.cpp  slic.h  superpixel.cpp  superpixel.h
Codigos/Tesis_ws/src/usbgm_pfs/src/: hough_horizon_search.cpp  plane_segmentation_alpha.cpp  prob_fns.cpp  prob_fns.cpp~  probabilistic_functions.cpp  segmentation_handler.cpp
Codigos/Tesis_ws/src/usbgm_pfs/test/: test_bayesian_horizon_search.cpp  test_egbis_superpixel_segmentation.cpp  test_encapsulated_horizon_search.cpp  test_histogram_superpixel_comparison.cpp  test_horizon_search.cpp  test_prob_floor_prior.cpp  test_prob_functions.cpp  test_prob_horizon_search.cpp  test_sapienza_gps_mod.cpp  test_slic_superpixel_segmentation.cpp  test_svo_depth_filter.cpp
Codigos/Tesis_ws/src/usbgm_pfs/test/gps_sapienza/: test_sapienza_features.cpp  test_sapienza_full.cpp
Codigos/Tesis_ws/src/usbgm_pfs/test/horizon_search/: test_encapsulated_horizon_search.cpp  test_prob_floor_prior.cpp
Codigos/Tesis_ws/src/usbgm_pfs/test/segmentation/: test_slic_superpixel_segmentation.cpp  test_superpixel_segmentation.cpp
Documentos/PlantillasLaTeX/Dissertate-Princeton-LaTeX/: Dissertate.cls
Documentos/PlantillasLaTeX/classicthesis/: ClassicThesis.aux  ClassicThesis.run.xml  ClassicThesis1-blx.aux
References/2D point-features Detectors and Descriptors/: Computer Vision Talks - Comparison of the OpenCV feature detection algorithms – II  Quora - What are the disadvantages of ORB in contrast to SURF
References/2D point-features Detectors and Descriptors/Gils CV blog/: A Short introduction to descriptors
References/Generative and Discriminative probability models/: Quora - What are the differences between generative and discriminative machine learning
Referencias/2D Features Detectors and Descriptors/: StackOverflow - Classification of detectors extractors and matchers
Referencias/2D Features Detectors and Descriptors/Gils CV blog/: Bag of Words Models for visual categorization  Tutorial on Binary Descriptors – part 1
Referencias/2D point-features Detectors and Descriptors/: Computer Vision Talks - Comparison of the OpenCV’s feature detection algorithms  StackOverflow - Are there any fast alternatives to SURF and SIFT for scale-invariant feature extraction
Referencias/Generative and Discriminative probability models/: StackExchange - Generative vs Discriminative models
(+222 files in other folders)
