<?xml version="1.0"?>
<package>
  <name>gps_sapienza_ros</name>
  <version>0.1.0</version>
  <description>Ground Plane Segmentation and Autonomous Guidance by Michael Sapienza</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rafaelcolmenaresusb@gmail.com">Rafael Colmenares</maintainer>
  <!-- <maintainer email="yoshua.nava.chocron@gmail.com">Yoshua Nava</maintainer> -->

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/usbgm_pfs</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <author email="rafaelcolmenaresusb@gmail.com">Rafael Colmenares</author>
  <!-- <author email="yoshua.nava.chocron@gmail.com">Yoshua Nava</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>cv_bridge</build_depend>


  <!-- Dependencies needed after this package is compiled. -->
  
	<run_depend>roscpp</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>cv_bridge</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
